<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="develop.admin.it.formular.CaiDatChuyenTin">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="1500dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="92dp"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toEndOf="@+id/textView19"
                app:layout_constraintTop_toBottomOf="@+id/radioButton5" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/giveup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerListContact" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/cutsend"
                app:layout_constraintStart_toEndOf="@+id/radioButton5"
                app:layout_constraintTop_toBottomOf="@+id/spinnerListContact" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="38dp"
                android:text="@string/maxd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioButton5" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:text="@string/maxl"
                app:layout_constraintStart_toEndOf="@+id/editText3"
                app:layout_constraintTop_toBottomOf="@+id/radioButton5" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="92dp"
                android:layout_height="39dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.235"
                app:layout_constraintStart_toEndOf="@+id/textView20"
                app:layout_constraintTop_toBottomOf="@+id/radioButton5" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/max3c"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="max g1"
                app:layout_constraintStart_toEndOf="@+id/editText5"
                app:layout_constraintTop_toBottomOf="@+id/textView19"
                tools:text="@string/maxg1" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="92dp"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toEndOf="@+id/textView21"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="92dp"
                android:layout_height="39dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.038"
                app:layout_constraintStart_toEndOf="@+id/textView22"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/maxx2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="92dp"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toEndOf="@+id/textView23"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/maxx3"
                app:layout_constraintStart_toEndOf="@+id/editText7"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="92dp"
                android:layout_height="39dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.137"
                app:layout_constraintStart_toEndOf="@+id/textView24"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/maxx4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView23" />

            <EditText
                android:id="@+id/editText9"
                android:layout_width="92dp"
                android:layout_height="39dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView25"
                app:layout_constraintTop_toBottomOf="@+id/textView23" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/de"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <EditText
                android:id="@+id/editText10"
                android:layout_width="92dp"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toEndOf="@+id/textView26"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/lo"
                app:layout_constraintStart_toEndOf="@+id/editText10"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <EditText
                android:id="@+id/editText11"
                android:layout_width="92dp"
                android:layout_height="39dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView27"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/xi2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <EditText
                android:id="@+id/editText12"
                android:layout_width="92dp"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toEndOf="@+id/textView28"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/xi3"
                app:layout_constraintStart_toEndOf="@+id/editText12"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <EditText
                android:id="@+id/editText13"
                android:layout_width="92dp"
                android:layout_height="39dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView29"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/xi4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView28" />

            <EditText
                android:id="@+id/editText14"
                android:layout_width="92dp"
                android:layout_height="39dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView30"
                app:layout_constraintTop_toBottomOf="@+id/textView28" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/giveException"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView30" />

            <EditText
                android:id="@+id/editText15"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/bacang"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="92dp"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toEndOf="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/g1"
                app:layout_constraintStart_toEndOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="92dp"
                android:layout_height="39dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView32"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="340dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText15" />

            <Spinner
                android:id="@+id/spinnerListContact"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.933"
                app:layout_constraintStart_toEndOf="@+id/radioButton6"
                app:layout_constraintTop_toBottomOf="@+id/spinnerListContact" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.971"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText15" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation" />
</android.support.v4.widget.DrawerLayout>